css/screen.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */

* {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
}

body {
  background-color: white;
  font: 13px Georgia, Arial, sans-serif;
  *font-size: small;
  text-align: center;
}

.title {
  text-align: center;
}

.title, h1, h2, h3, h4, h5, h6 {
  font-size: 100%;
  font-family: Helvetica, Arial, Clean, sans-serif;
}

h1 {
  padding-bottom: 1em;
}

p {
  margin: 1em 0;
}

a {
  color: #00b;
  text-decoration: none;
}

a:visited {
  color: #88b;
}

a:hover {
  color: #008;
}

table {
  font-size: inherit;
  font: 100%;
}

/*****************************************************************************/
/*
/* Home/Resume
/*
/*****************************************************************************/

ul.posts {
  list-style-type: none;
  margin-bottom: 1em;
}

  ul.posts li {
    line-height: 1.75em;
  }

  #resume ul.posts li {
    padding-bottom: 1ex;
  }

  ul.posts .timestamp {
    float: right;
    color: #aaa;
  }

  ul.posts .postlink {
    margin-left: 0.5ex;
  }

  ul.posts .content, #resume > p {
    font-size: 90%;
    line-height: 1.5em;
    margin: 0ex 3ex 0ex 3ex;
  }

  #resume > p {
    padding-bottom: 1em;
  }

  ul.posts .content p {
    margin: 0;
    padding-top: 0.5ex;
    padding-bottom: 1ex;
  }

  ul.posts .content ul {
    margin: 0ex 1ex 0ex 3ex;
  }

/*****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {
  font-size: 110%;
  text-align: left;
  width: 40em;
  margin: 3em auto 2em auto;
  line-height: 1.5em;
}

.title {
  color: #a00;
  font-weight: bold;
  margin-bottom: 2em;
}

  .site .title .name {
    font-size: 120%;
  }

  .site .title a {
    color: #a00;
    text-decoration: none;
  }

  .site .title a:hover {
    color: black;
  }

  .site .title a.extra {
    color: #aaa;
    text-decoration: none;
    margin-left: 1em;
  }

  .site .title a.extra:hover {
    color: black;
  }

  .site .meta {
    color: #aaa;
  }

  .site .footer {
    font-size: 80%;
    color: #666;
    border-top: 4px solid #eee;
    margin-top: 2em;
    overflow: hidden;
  }

    .site .footer .contact {
      text-align: center;
    }

      .site .footer .contact a {
        color: #a00;
        text-decoration: none;
      }

      .site .footer .contact a:hover {
        color: black;
      }

/*****************************************************************************/
/*
/* Posts
/*
/*****************************************************************************/

#post {

}

  /* standard */

  #post pre {
    border: 1px solid #ddd;
    background-color: #eef;
    padding: 0 .4em;
  }

  #post ul,
  #post ol {
    margin-left: 1.35em;
  }

  #post code {
    border: 1px solid #ddd;
    background-color: #eef;
    font-size: 85%;
    padding: 0 .2em;
  }

    #post pre code {
      border: none;
    }

  /* terminal */

  #post pre.terminal {
    border: 1px solid black;
    background-color: #333;
    color: white;
  }

  #post pre.terminal code {
    background-color: #333;
  }

#related {
  margin-top: 2em;
}

  #related h2 {
    margin-bottom: 1em;
  }

